# slr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  search_terms.csv
.github/workflows/: python-app.yml
src/: main.py
src/core/: abstract_database.py  crud.py  database.py  documents.db  models.py  plotter.py  query.py  scopus.py  utils.py
src/core/db_tests/: data_script.py  test_execution.py
tests/: test_execution.py
